<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="@android:color/white"
        app:subtitleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="8dp">

        <EditText
            android:id="@+id/inputNomeFiltro"
            android:hint="Cerca per nome"
            android:background="@drawable/edittext_background"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinnerDifficoltaFiltro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btnCerca"
            android:text="Cerca"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/purple_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp" />

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerAllenamenti"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation"
        app:itemIconTint="@color/bottom_nav_icon_color"
        app:itemTextColor="@color/bottom_nav_icon_color" />
</LinearLayout>
